objects/Migration_Dependency__c.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field</label>
        <referenceTo>Field_Trip__Field_Analysis__c</referenceTo>
        <relationshipLabel>Migration Dependencies</relationshipLabel>
        <relationshipName>Migration_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Intelligent__c</fullName>
        <label>Migration Intelligent</label>
        <referenceTo>Migration_Statistics__c</referenceTo>
        <relationshipLabel>Migration Dependencies</relationshipLabel>
        <relationshipName>Migration_Dependencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object</label>
        <referenceTo>Field_Trip__Object_Analysis__c</referenceTo>
        <relationshipLabel>Migration Dependencies</relationshipLabel>
        <relationshipName>Migration_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Migration Dependency</label>
    <nameField>
        <displayFormat>MD-{0000}</displayFormat>
        <label>Migration Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>